<resources>
    <string name="app_name">FIRE</string>
    <string name="main_activity">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="catch_phrase">Evolve from survival to financial independence</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirmation">Password Confirmation</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_email">Not a valid email address</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_password_confirmation">Passwords must match</string>
    <string name="invalid_first_name">Not a valid first name</string>
    <string name="invalid_last_name">Not a valid last name</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no_account_description">"No account yet?"</string>

</resources>
